--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,10 @@
 @media (max-width: 576px) {
-  body {
-    /* background-color: rgb(210, 199, 132); */
-  }
+  /*HIDING AVATAR*/
   .avatar {
     display: none !important;
   }
+
+  /* NAVBAR */
   #nav-bar .container {
     display: block;
     justify-content: start;
@@ -26,8 +26,12 @@
   }
 
   .name {
-    top: 30%;
-    left: 10%;
+    left: 26%;
+  }
+
+  .role {
+    top: 69%;
+    left: 24%;
   }
 
   #nav-bar .container div {
@@ -36,6 +40,7 @@
     text-decoration: none;
   }
 
+  /* ABOUT INFO SECTION */
   #about .container-fluid {
     grid-template-columns: 1fr;
   }
@@ -51,6 +56,8 @@
   .column-3 {
     grid-template-columns: 1fr;
   }
+
+  /* CERT SECTION */
   .cert-section {
     display: grid;
     grid-template-columns: 1fr;
@@ -66,6 +73,8 @@
     border-left: 0;
   }
 
+  /* PROJECT SECTION */
+
   .project-section {
     grid-template-columns: auto;
   }
@@ -74,18 +83,16 @@
     gap: 30px;
   }
 
+  .project-info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  /* FOOTER DOWNSIZING*/
+
   .icon-facebook-circled,
   .icon-linkedin-circled,
   .icon-github-circled {
     font-size: 20px;
-  }
-}
-
-@media (max-width: 315px) {
-  .project-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
   }
 }
