--- a/css/style.css
+++ b/css/style.css
@@ -421,14 +421,14 @@ section > .container {
 }
 
 .project-info {
-  padding: 5px 20px;
+  padding: 10px 20px;
   height: 100%;
   display: flex;
   align-items: center;
 }
 
 .project-info-2 {
-  align-items: flex-start;
+  /* align-items: flex-start; */
   display: flex;
   flex-direction: row;
 }
@@ -441,13 +441,16 @@ td {
   background-color: #4dabf7;
   color: white;
   padding: 5px 12px;
-  border-radius: 12px;
+  border-radius: 24px;
   margin-right: 12px;
 }
 
 #project a:hover {
   color: #199cdb;
   transform: scale(1.05);
+}
+#project {
+  margin: 50px 0;
 }
 
 /*FOOTER SECTION*/
